z-index correction

--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -3,7 +3,7 @@ body
         height: 100%
         width: 0
         position: fixed
-        z-index: 3
+        z-index: 4
         top: 0
         right: 0
         background-color: rgba(3,0,23,0.64)
